--- a/{{cookiecutter.repo_name}}/circle.yml
+++ b/{{cookiecutter.repo_name}}/circle.yml
@@ -2,6 +2,10 @@ general:
   artifacts:
      - "dist"
      - "cover"
+dependencies:
+  override:
+    - pip install tox tox-pyenv
+    - pyenv local 2.7.9 3.5.0
 test:
   override:
      - tox
